Bug 117032 - Fix double hash lookup in WebPage::determinePrimarySnapshottedPlugIn() loop.
Summary: Fix double hash lookup in WebPage::determinePrimarySnapshottedPlugIn() loop.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Plug-ins (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords: Performance
Depends on:
Blocks:
 
Reported: 2013-05-30 08:26 PDT by Andreas Kling
Modified: 2013-05-30 10:06 PDT (History)
1 user (show)

See Also:


Attachments
Patch (1.21 KB, patch)
2013-05-30 08:28 PDT, Andreas Kling
andersca: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-05-30 08:26:50 PDT
Fix double hash lookup in WebPage::determinePrimarySnapshottedPlugIn() loop.
Comment 1 Andreas Kling 2013-05-30 08:28:27 PDT
Created attachment 203360 [details]
Patch
Comment 2 Andreas Kling 2013-05-30 10:06:50 PDT
Committed r150968: <http://trac.webkit.org/changeset/150968>