Fix double hash lookup in WebPage::determinePrimarySnapshottedPlugIn() loop. <http://webkit.org/b/117032>

Reviewed by Anders Carlsson.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::determinePrimarySnapshottedPlugIn):

Canonical link: https://commits.webkit.org/135300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150968 268f45cc-cd09-0410-ab3c-d52691b4dbfc